# computing-monitor

./: .gitignore  README.md
collector/: Cargo.toml
collector/data/managed-logs/: 309712ab-7039-4155-949f-c36332c59745.jsonl  5eb176db-5500-4161-9035-b54ee40c2637.jsonl  c257401c-a8f6-4330-9f03-374665db6638.jsonl
collector/src/: main.rs
docs/: api.md  architecture.md
server/: package-lock.json  package.json
server/src/: index.ts
server/src/routes/: managedProcesses.ts  processes.ts
server/src/services/: collectorClient.ts
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.svelte  app.css  main.ts
