[package]
name = "computing-monitor-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time", "io-util", "signal"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
